# handler/k8s_monitoring_handler.go
@@ -16,7 +16,16 @@ func NewK8sMonitoringHandler(kubernetesClient *K8sClient) (*K8sMonitoringHandler
 func (kmh *K8sMonitoringHandler) GetV1Pods(namespace string) (pods models.Pods, err error) {
 	pods, err = kmh.k8sClient.GetAllPods(namespace)
 	if err != nil {
-		return nil, fmt.Errorf("Creating k8s monitoring handler failed: %s", err)
+		return nil, fmt.Errorf("Fetching all pods for the namespace: %s failed: %v", namespace, err)
+	}
+
+	return
+}
+
+func (kmh *K8sMonitoringHandler) GetV1PodsUnderLoad(namespace string, cpuThreshold string, memoryThreshold string) (pods models.Pods, err error) {
+	pods, err = kmh.k8sClient.GetAllPodsUnderLoad(namespace, cpuThreshold, memoryThreshold)
+	if err != nil {
+		return nil, fmt.Errorf("Fetching pods breaching thresholds for the namespace: %s failed: %v", namespace, err)
 	}
 
 	return
@@ -25,7 +34,7 @@ func (kmh *K8sMonitoringHandler) GetV1Pods(namespace string) (pods models.Pods, 
 func (kmh *K8sMonitoringHandler) PutV1Pod(deployment *models.PodDeployment) (pods *models.PodDeployment, err error) {
 	pods, err = kmh.k8sClient.UpdatePodDeployment(deployment)
 	if err != nil {
-		return nil, fmt.Errorf("Update to pod deployment failed: %s", err)
+		return nil, fmt.Errorf("Update to pod deployment failed: %v", err)
 	}
 
 	return
