# models/pod_container.go
@@ -1,0 +1,98 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// PodContainer A pod container
+//
+// swagger:model PodContainer
+type PodContainer struct {
+
+	// Current CPU usage of the container.
+	// Required: true
+	CurrentCPUUsage *string `json:"currentCpuUsage"`
+
+	// Current memory usage of the container.
+	// Required: true
+	CurrentMemoryUsage *string `json:"currentMemoryUsage"`
+
+	// Name of the container
+	// Required: true
+	Name *string `json:"name"`
+}
+
+// Validate validates this pod container
+func (m *PodContainer) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateCurrentCPUUsage(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateCurrentMemoryUsage(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PodContainer) validateCurrentCPUUsage(formats strfmt.Registry) error {
+
+	if err := validate.Required("currentCpuUsage", "body", m.CurrentCPUUsage); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *PodContainer) validateCurrentMemoryUsage(formats strfmt.Registry) error {
+
+	if err := validate.Required("currentMemoryUsage", "body", m.CurrentMemoryUsage); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *PodContainer) validateName(formats strfmt.Registry) error {
+
+	if err := validate.Required("name", "body", m.Name); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PodContainer) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PodContainer) UnmarshalBinary(b []byte) error {
+	var res PodContainer
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
